@@ -1,3 +1,11 @@
+2008-03-30  Pavel Roskin  <proski@gnu.org>
+
+	* kern/i386/pc/startup.S (real_to_prot): Use %cs prefix to load
+	GDT.  This is more robust, as %ds can change.
+	(grub_biosdisk_rw_int13_extensions): Don't clear %ds before
+	calling real_to_prot().
+	(grub_biosdisk_get_diskinfo_int13_extensions): Likewise.
+
 2008-03-28  Pavel Roskin  <proski@gnu.org>
 
 	* kern/i386/pc/startup.S: Assert that uncompressed functions
